# fizzbuzz_swiftnav

./: CMakeLists.txt  NOTES.md  README.md  fizzbuzz.c  simple-tests.sh
tests/: args-a-z-lf-5000  args-lf-1000  args-lf-200  args-v-a-z-lf-3000  args-v-z-lf-200  args-z-lf-200  default-200
